RDCC-4453: addressing Sonar Issues in OrganisationCreationRequestValidator.java